--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,4 @@
 <h1>Welcome to the finance tracker app</h1>
+
+<!--devise help us handle the sign in , we need provide the sign out link ot user-->
+<%= link_to "logout", destroy_user_session_path, method: :delete %>
