--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,8 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *  [Jerry] add after bundle install the gem 'devise_bootstrap_views'
+ *= require devise_bootstrap_views
  *= require_tree .
  *= require_self
  */
