add stock query with ajax, and processing spinner

--- a/app/views/stocks/_lookup.html.erb
+++ b/app/views/stocks/_lookup.html.erb
@@ -18,6 +18,8 @@
         </div>
     </div>
   <% end %>
+  <!--render a spinner when wait the stock quoting by network-->
+  <%= render 'common/spinner'%>
 
 
 <!--If you find the ticker, who to display-->
