--- a/app/views/stocks/_lookup.html.erb
+++ b/app/views/stocks/_lookup.html.erb
@@ -29,6 +29,10 @@
       <strong>Symbol:</strong> <%= @stock.ticker %>
       <strong>Name:</strong> <%= @stock.name %>
       <strong>Price:</strong> <%= @stock.price %>
+      <!--we want to add a link to add the stock we quted out to users protfolio-->
+      <!--we will pass below parameter to user_stock_controller.rb in create method-->
+      <%= link_to "Add to my Stocks", user_stocks_path(user: current_user,stock_ticker: @stock.ticker,
+                                                      stock_id: @stock.id ? @stock_id : ''), class: 'btn btn-xs btn-success', method: :post%>
     </div>
   <% end %>
 <!--for quote error-->
