--- a/app/views/stocks/_lookup.html.erb
+++ b/app/views/stocks/_lookup.html.erb
@@ -29,10 +29,26 @@
       <strong>Symbol:</strong> <%= @stock.ticker %>
       <strong>Name:</strong> <%= @stock.name %>
       <strong>Price:</strong> <%= @stock.price %>
-      <!--we want to add a link to add the stock we quted out to users protfolio-->
-      <!--we will pass below parameter to user_stock_controller.rb in create method-->
-      <%= link_to "Add to my Stocks", user_stocks_path(user: current_user,stock_ticker: @stock.ticker,
-                                                      stock_id: @stock.id ? @stock_id : ''), class: 'btn btn-xs btn-success', method: :post%>
+
+      <!--we add more restric to control people can add stock or not (from user.rb)-->
+      <% if current_user.can_add_stock?(@stock.ticker)%>
+        <!--we want to add a link to add the stock we quted out to users protfolio-->
+        <!--we will pass below parameter to user_stock_controller.rb in create method-->
+        <%= link_to "Add to my Stocks", user_stocks_path(user: current_user,stock_ticker: @stock.ticker,
+                                                        stock_id: @stock.id ? @stock_id : ''), class: 'btn btn-xs btn-success', method: :post%>
+      <% else %>
+        <span class="label label-default">
+          Stock cannot be added because you have already added
+          <% if !current_user.under_stock_limit? %>
+            10 stocks
+          <% end %>
+          <% if current_user.stock_already_added?(@stock.ticker)%>
+            this stock
+          <% end %>
+        </span>
+
+
+      <% end %>
     </div>
   <% end %>
 <!--for quote error-->
