add the list of user stocks

--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -2,3 +2,6 @@
 <!--[Jerry] call the partial _lookup-->
 
 <%= render 'stocks/lookup' %>
+
+<!--[Jerry] render the stocks list in partial-->
+<%= render 'stocks/list'%>
