add sign up /edit with first, last name. add view and nagavation bar

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Welcome to the finance tracker app</h1>
 
 <!--devise help us handle the sign in , we need provide the sign out link ot user-->
-<%= link_to "logout", destroy_user_session_path, method: :delete %>
+<!--we don't need below link anymore since we add the btn logout-->
+<!-- <%= link_to "logout", destroy_user_session_path, method: :delete %> -->
