--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,3 +2,54 @@
 
   display: inline-block;
 }
+
+
+
+
+
+//add for sign up page, firat name and last name input box
+.no-padding {
+  padding: 0 !important;
+}
+
+
+.left-padding {
+  padding-left: 15px !important;
+}
+
+
+.user-name {
+
+  padding-top: 15px;
+
+}
+
+
+
+
+
+
+//add for logout
+.logout {
+
+  padding-left: 0;
+
+}
+//beacuse the SCSS, we can nesting the css
+.nav.navbar-right li {
+
+  .btn {
+
+    color: #fff !important;
+
+    margin-top: 5%;
+
+  }
+
+  .btn-danger:hover {
+
+    background-color: darken(#d9534f, 20%) !important;
+
+  }
+
+}
