--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,6 +9,19 @@
         <%= f.label :email %>
         <%= f.email_field :email, autofocus: true, class: "form-control" %>
       </div>
+
+      <!--[Jerry] add the first_name and last_name to login-->
+      <div class="form-group">
+        <div class="col-md-6 no-padding">
+          <%= f.label :first_name %>
+          <%= f.text_field :first_name, class: "form-control" %>
+       </div>
+       <div class="col-md-6 no-padding left-padding">
+          <%= f.label :last_name %>
+          <%= f.text_field :last_name, class: "form-control" %>
+       </div>
+     </div><!--copy this block to edit html erb-->
+
       <div class="form-group">
         <%= f.label :password %> <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it', :default => "leave blank if you don't want to change it") %>)</i>
         <%= f.password_field :password, :autocomplete => "off", class: "form-control" %>
