--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,6 +9,22 @@
         <%= f.label :email %>
         <%= f.email_field :email, autofocus: true, class: "form-control" %>
       </div>
+
+
+      <!--[Jerry] add the first_name and last_name to login-->
+      <div class="form-group">
+        <div class="col-md-6 no-padding">
+          <%= f.label :first_name %>
+          <%= f.text_field :first_name, class: "form-control" %>
+       </div>
+       <div class="col-md-6 no-padding left-padding"><!--we will add no-padding left-padding on custom.css.scss later-->
+          <%= f.label :last_name %>
+          <%= f.text_field :last_name, class: "form-control" %>
+       </div>
+     </div><!--copy this block to edit html erb-->
+
+
+
       <div class="form-group">
         <%= f.label :password %>
         <%= f.password_field :password, class: "form-control" %>
