add the friend show page,list and routes.

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -15,7 +15,8 @@
           <!--[Jerry] Change to we want-->
           <li><%= link_to "My Portfolio", my_portfolio_path  %></li>
           <li><%= link_to  "My Profile", edit_registration_path(current_user)   %></li>
-          <li><%= link_to "Link3", "/path3"  %></li>
+          <!--[Jerry] add the my friend system-->
+          <li><%= link_to "My Friends", my_friends_path  %></li>
         </ul>
         <!--[Jerry]  we will add user-name, logout class in css later-->
         <ul class="nav ">
