add friendship and search friend bar

--- a/app/views/users/my_friends.html.erb
+++ b/app/views/users/my_friends.html.erb
@@ -1,5 +1,5 @@
 <!--we markit up first, because we don't have this _lookup.html.erb yet-->
-<%#= render 'friends/lookup' %>
+<%= render 'friends/lookup' %>
 
 <!--@ friendships gets from user controller-->
 <% if @friendships.size > 0 %>
